--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore tempora corporis, consectetur qui ad, ipsum voluptatum magni saepe quibusdam deleniti perspiciatis doloremque quisquam ut eum. Ea expedita dolore sint maiores?Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente odio maiores eum vero aperiam nemo quia, veniam fugit incidunt delectus.</p>
             </div>
             <div class="image">
-                <img src="/Assets/pic1.jpg" alt="profile">
+                <img src="./Assets/pic1.jpg" alt="profile">
                 <h1>Frontend</h1>
                 <h2 class="theme">Developer</h2>
             </div>
         </div>
         <h3 class="text theme">Gallery</h3>
         <div class="gallary">
-            <img src="/Assets/pic2.jpg" alt="" class="pictures pic1">
-            <img src="/Assets/pic3.jpg" alt="" class="pictures pic2">
-            <img src="/Assets/pic4.jpg" alt="" class="pictures">
+            <img src="./Assets/pic2.jpg" alt="" class="pictures pic1">
+            <img src="./Assets/pic3.jpg" alt="" class="pictures pic2">
+            <img src="./Assets/pic4.jpg" alt="" class="pictures">
         </div>
         <div class="section2">
             <div class="interests">
