--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1>Hello, I'm</h1>
                 <h1 class="theme">K Suman Patra</h1>
                 <h2>About me!</h2><br>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore tempora corporis, consectetur qui ad, ipsum voluptatum magni saepe quibusdam deleniti perspiciatis doloremque quisquam ut eum. Ea expedita dolore sint maiores?Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente odio maiores eum vero aperiam nemo quia, veniam fugit incidunt delectus.</p>
+                <p>I'm a curious personal who loves exploring new ideas and learning from every experience. Whether it's through books, conversations, or adventures, I thrive on discovering new perspectives. With a passion for creativity , I'm always ready to embrace life's challenges with enthusiasm and an open mind. I'm very excited to learn explore the coding world .</p>
             </div>
             <div class="image">
                 <img src="./Assets/pic1.jpg" alt="profile">
@@ -32,7 +32,7 @@
         <div class="section2">
             <div class="interests">
                 <h1>My Interests!</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic, enim fugit ad ipsam, harum libero aperiam voluptas nihil quo ipsum rerum, iusto quis vero illum quasi non dicta soluta in. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias debitis vero eveniet dolore ex nisi libero aliquid molestias tenetur iusto.</p>
+                <p>Interested in drawing and arts .In the new world coding excites me very much .Want to explore through the realm of coding field and sharpen my skills .Love to play batminton as well as chess .Also like listening song in my free time. </p>
             </div>
             <div class="q">
                 <h2 class="theme quali">Qualifications:</h2>
@@ -53,9 +53,9 @@
         <div class="line"></div>
         <h3 class="textcontact">Contact me!</h3>
         <div class="contact">
-            <a href="#">Instagram</a>
-            <a href="#">Linkedin</a>
-            <a href="#">Email</a>
+            <a href="https://www.instagram.com/sumanpatra_06/">Instagram</a>
+            <a href="https://www.linkedin.com/in/k-suman-patra-129786298/">Linkedin</a>
+            <a href="ksumanpatra06@gmail.com">Email</a>
             <p>ph: 7855925132</p>
         </div>
         <p class="love">made with 💖</p>
